Перед началом второго дз

--- a/index.html
+++ b/index.html
@@ -6,40 +6,37 @@
 </head>
 <body>
         <header class="section1">
-            <h1 class="first-h"></h1>
+            <h1 class="first-h">Product name</h1>
             <ul class="list">
-                <li class="list-struct"></li>
-                <li class="list-struct"></li>
-                <li class="list-struct"></li>
-                <li class="list-struct"></li>
-                <img src="" alt="" class="photo">
+                <li class="list-struct">Put on this page information about your product</li>
+                <li class="list-struct">A detailed description of your product</li>
+                <li class="list-struct">Tell us about the advantages and merits</li>
+                <li class="list-struct">Associate the page with the payment system</li>
+                <img src="" alt="" class="photo" width="300" height="200">
             </ul>
         </header>
         <main class="main">
         <section class="section2">
-            <h2 class="second-h"></h2>
-            <p class="par"></p>
-            <p class="par"></p>
+            <h2 class="second-h">About your product</h2>
+            <p class="par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+            <p class="par">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             <video src=""></video>
-
-            <img src="" alt="" class="photo">
-
         </section>
         <section class="section3">
-            <h2 class="third-h"></h2>
+            <h2 class="third-h">Dignity and pluses product</h2>
             <ul class="second-list">
-                <li class="struct-list"></li>
-                <li class="struct-list"></li>
-                <li class="struct-list"></li>
+                <li class="struct-list">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="struct-list">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
+                <li class="struct-list">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
             </ul>
                 <ul class="second-list">
-                    <li class="struct-list"></li>
-                    <li class="struct-list"></li>
-                    <li class="struct-list"></li>
+                    <li class="struct-list">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
+                    <li class="struct-list">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
+                    <li class="struct-list">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
                 </ul>
         </section>
         <section class="screen">
-            <h2 class="fourth-h"></h2>
+            <h2 class="fourth-h">Screenshots</h2>
             <div class="block">
                 <img src="" alt="" class="photo">
                 <h4 class="card-h"></h4>
