--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
         <section class="screen">
             <h2 class="fourth-h">Screenshots</h2>
             <div class="block">
-                <img src="" alt="" class="photos">
-                <h4 class="card-h"></h4>
-                <p class="text"></p>
+                <img src="" alt="" class="photos" width="300" height="200">
+                <h4 class="card-h">The description for the image</h4>
+                <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
             <div class="block">
                 <img src="" alt="" class="photos">
-                <h4 class="card-h"></h4>
-                <p class="text"></p>
+                <h4 class="card-h">The description for the image</h4>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
             </div>
             <div class="block">
                 <img src="" alt="" class="photos">
-                <h4 class="card-h"></h4>
-                <p class="text"></p>
+                <h4 class="card-h">The description for the image</h4>
+                <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
             <div class="block">
                 <img src="" alt="" class="photos">
-                <h4 class="card-h"></h4>
-                <p class="text"></p>
+                <h4 class="card-h">The description for the image</h4>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
             </div>
         </section>
         <section class="reviews">
