--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
  <div class="container">
@@ -26,7 +26,7 @@
                 <p class="par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 <p class="par">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
-            <video src=""></video>
+            <video src="" width="427" height="245"></video>
         </section>
         <section class="section3">
             <h2 class="third-h">Dignity and pluses product</h2>
@@ -43,56 +43,60 @@
         </section>
         <section class="screen">
             <h2 class="fourth-h">Screenshots</h2>
-            <div class="block">
-                <img src="" alt="" class="photos" width="300" height="200">
+            <figure class="block">
+               <img src="" alt="" class="photos" width="300" height="200">
+               <figcaption>
                 <h4 class="card-h">The description for the image</h4>
                 <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-            </div>
-            <div class="block">
-                <img src="" alt="" class="photos">
-                <h4 class="card-h">The description for the image</h4>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
-            </div>
-            <div class="block">
-                <img src="" alt="" class="photos">
+               </figcaption>
+            </figure>
+             <figure class="block">
+               <img src="" alt="" class="photos" width="300" height="200">
+               <figcaption>
                 <h4 class="card-h">The description for the image</h4>
                 <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-            </div>
-            <div class="block">
-                <img src="" alt="" class="photos">
+               </figcaption>
+            </figure>
+             <figure class="block">
+               <img src="" alt="" class="photos" width="300" height="200">
+               <figcaption>
                 <h4 class="card-h">The description for the image</h4>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
-            </div>
+                <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+               </figcaption>
+            </figure>
+             <figure class="block">
+               <img src="" alt="" class="photos" width="300" height="200">
+               <figcaption>
+                <h4 class="card-h">The description for the image</h4>
+                <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+               </figcaption>
+            </figure>
         </section>
         <section class="reviews">
             <h3 class="fifth-h"></h3>
             <div class="comment">
-                <img src="" alt="" class="avatar">
-                <article class="comm">
-                    <p class="comments"></p>
-                    <footer class="author"></footer>
-                </article>
+              <img src="" alt="" class="avatar">
+              <p class="comments">
+                <span class="author"></span>
+              </p>
             </div>
             <div class="comment">
-                <img src="" alt="" class="avatar">
-                <article class="comm">
-                    <p class="comments"></p>
-                    <footer class="author"></footer>
-                </article>
+              <img src="" alt="" class="avatar">
+              <p class="comments">
+                <span class="author"></span>
+              </p>
             </div>
             <div class="comment">
-                <img src="" alt="" class="avatar">
-                <article class="comm">
-                    <p class="comments"></p>
-                    <footer class="author"></footer>
-                </article>
+              <img src="" alt="" class="avatar">
+              <p class="comments">
+                <span class="author"></span>
+              </p>
             </div>
             <div class="comment">
-                <img src="" alt="" class="avatar">
-                <article class="comm">
-                    <p class="comments"></p>
-                    <footer class="author"></footer>
-                </article>
+              <img src="" alt="" class="avatar">
+              <p class="comments">
+                <span class="author"></span>
+              </p>
             </div>
         </section>
         <section class="buy">
