--- a/index.html
+++ b/index.html
@@ -73,34 +73,34 @@
             </figure>
         </section>
         <section class="reviews">
-            <h3 class="fifth-h"></h3>
+            <h3 class="fifth-h">Reviews</h3>
             <div class="comment">
               <img src="" alt="" class="avatar">
-              <p class="comments">
-                <span class="author"></span>
+              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                <span class="author">Lourens S.</span>
+              </p>
+            </div>
+            <div class="comment">
+             <img src="" alt="" class="avatar">
+              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
               <img src="" alt="" class="avatar">
-              <p class="comments">
-                <span class="author"></span>
+              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
               <img src="" alt="" class="avatar">
-              <p class="comments">
-                <span class="author"></span>
-              </p>
-            </div>
-            <div class="comment">
-              <img src="" alt="" class="avatar">
-              <p class="comments">
-                <span class="author"></span>
+              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                <span class="author">Lourens S.</span>
               </p>
             </div>
         </section>
         <section class="buy">
-            <h3 class="sixth-h"></h3>
+            <h3 class="sixth-h">Buy it now</h3>
             <div class="card-buy">
                 <h4 class="card-h"></h4>
                 <div class="price">
