--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
             <h3 class="fifth-h">Reviews</h3>
             <div class="comment">
               <img src="" alt="" class="avatar">
-              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+              <p class="comments"><i> Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i> <br> 
                 <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
              <img src="" alt="" class="avatar">
-              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+              <p class="comments"><i>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i><br>
                 <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
               <img src="" alt="" class="avatar">
-              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+              <p class="comments"><i>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i><br>
                 <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
               <img src="" alt="" class="avatar">
-              <p class="comments">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+              <p class="comments"><i>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i><br>
                 <span class="author">Lourens S.</span>
               </p>
             </div>
