--- a/index.html
+++ b/index.html
@@ -102,40 +102,49 @@
         <section class="buy">
             <h3 class="sixth-h">Buy it now</h3>
             <div class="card-buy">
-                <h4 class="card-h"></h4>
-                <div class="price">
-                    <p class="price-num"></p>
-                </div>
-                <ul class="list-buy">
-                    <li class="you-had"></li>
-                    <li class="you-had"></li>
-                    <li class="you-had"></li>
-                    </ul>
-                    <input type="text" class="buy-input">
+                <h4 class="card-h-buy">Standart</h4> 
+                    <p class="price-num"> $100</p>
+                <ol class="list-buy">
+                    <li class="you-had">Porro officia cumque sint deleniti;</li>
+                    <li class="you-had">Тemo facere rem vitae odit;</li>
+                    <li class="you-had">Cum odio, iste quia doloribus autem;</li>
+                    <li class="you-had">Aperiam nulla ea neque.</li>
+                </ol>
+                    <button class="buy-btn">buy</button>
             </div>
             <div class="card-buy">
-                <h4 class="card-h"></h4>
-                <div class="price">
-                    <p class="price-num"></p>
-                </div>
-                 <ul class="list-buy">
-                    <li class="you-had"></li>
-                    <li class="you-had"></li>
-                    <li class="you-had"></li>
-                    </ul>
-                    <input type="text" class="buy-input">
+                <h4 class="card-h-buy">Premium</h4> 
+                    <p class="price-num">$150</p>
+                <ol class="list-buy">
+                    <li class="you-had">Porro officia cumque sint deleniti;</li>
+                    <li class="you-had">Тemo facere rem vitae odit;</li>
+                    <li class="you-had">Cum odio, iste quia doloribus autem;</li>
+                    <li class="you-had">Aperiam nulla ea neque.</li>
+                    <li class="you-had">Porro officia cumque sint deleniti;</li>
+                    <li class="you-had">Тemo facere rem vitae odit;</li>
+                    <li class="you-had">Cum odio, iste quia doloribus autem; </li>
+                    <li class="you-had">Aperiam nulla ea neque.</li>
+                </ol>
+                    <button class="buy-btn">buy</button>
             </div>
             <div class="card-buy">
-                <h4 class="card-h"></h4>
-                <div class="price">
-                    <p class="price-num"></p>
-                </div>
-                 <ul class="list-buy">
-                    <li class="you-had"></li>
-                    <li class="you-had"></li>
-                    <li class="you-had"></li>
-                    </ul>
-                    <input type="text" class="buy-input">
+                <h4 class="card-h-buy">Lux</h4> 
+                    <p class="price-num">$200</p>
+                <ol class="list-buy">
+                    <li class="you-had">Porro officia cumque sint deleniti;</li>
+                    <li class="you-had">Тemo facere rem vitae odit;</li>
+                    <li class="you-had">Cum odio, iste quia doloribus autem;</li>
+                    <li class="you-had">Aperiam nulla ea neque.</li>
+                    <li class="you-had">Porro officia cumque sint deleniti;</li>
+                    <li class="you-had">Тemo facere rem vitae odit;</li>
+                    <li class="you-had">Cum odio, iste quia doloribus autem; </li>
+                    <li class="you-had">Aperiam nulla ea neque.</li>
+                    <li class="you-had">Porro officia cumque sint deleniti;</li>
+                    <li class="you-had">Тemo facere rem vitae odit;</li>
+                    <li class="you-had">Cum odio, iste quia doloribus autem;</li>
+                    <li class="you-had">Aperiam nulla ea neque.</li>
+                </ol>
+                    <button class="buy-btn">buy</button>
             </div>
         </section>
         <section class="contact">
