--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
  <header class="section1">
             <div class="need">
                 <h1 class="first-h">Product name</h1>
-            <ul class="list">
-                <li class="list-struct">Put on this page information about your product</li>
-                <li class="list-struct">A detailed description of your product</li>
-                <li class="list-struct">Tell us about the advantages and merits</li>
-                <li class="list-struct">Associate the page with the payment system</li>
-            </ul>
+                <ul class="list">
+                    <li class="list-struct">Put on this page information about your product</li>
+                    <li class="list-struct">A detailed description of your product</li>
+                    <li class="list-struct">Tell us about the advantages and merits</li>
+                    <li class="list-struct">Associate the page with the payment system</li>
+                </ul>
             </div>
-            <img src="" alt="Товар" class="photo" width="300" height="200">
+            <img src="#" alt="Товар" class="photo" width="300" height="200">
         </header>
         <main class="main">
         <section class="section2">
@@ -44,28 +44,28 @@
         <section class="screen">
             <h2 class="fourth-h">Screenshots</h2>
             <figure class="block">
-               <img src="" alt="" class="photos" width="300" height="200">
+               <img src="#" alt="Скриншот" class="photos" width="300" height="200">
                <figcaption>
                 <h4 class="card-h">The description for the image</h4>
                 <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                </figcaption>
             </figure>
              <figure class="block">
-               <img src="" alt="" class="photos" width="300" height="200">
+               <img src="#" alt="Скриншот" class="photos" width="300" height="200">
                <figcaption>
                 <h4 class="card-h">The description for the image</h4>
                 <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                </figcaption>
             </figure>
              <figure class="block">
-               <img src="" alt="" class="photos" width="300" height="200">
+               <img src="#" alt="Скриншот" class="photos" width="300" height="200">
                <figcaption>
                 <h4 class="card-h">The description for the image</h4>
                 <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                </figcaption>
             </figure>
              <figure class="block">
-               <img src="" alt="" class="photos" width="300" height="200">
+               <img src="#" alt="Скриншот" class="photos" width="300" height="200">
                <figcaption>
                 <h4 class="card-h">The description for the image</h4>
                 <p class="text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
@@ -75,25 +75,25 @@
         <section class="reviews">
             <h3 class="fifth-h">Reviews</h3>
             <div class="comment">
-              <img src="" alt="" class="avatar">
+              <img src="#" alt="Аватар" class="avatar" width="75" height="75">
               <p class="comments"><i> Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i> <br> 
                 <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
-             <img src="" alt="" class="avatar">
+             <img src="#" alt="Аватар" class="avatar" width="75" height="75">
               <p class="comments"><i>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i><br>
                 <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
-              <img src="" alt="" class="avatar">
+              <img src="#" alt="Аватар" class="avatar" width="75" height="75">
               <p class="comments"><i>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i><br>
                 <span class="author">Lourens S.</span>
               </p>
             </div>
             <div class="comment">
-              <img src="" alt="" class="avatar">
+              <img src="#" alt="Аватар" class="avatar" width="75" height="75">
               <p class="comments"><i>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</i><br>
                 <span class="author">Lourens S.</span>
               </p>
@@ -103,7 +103,7 @@
             <h3 class="sixth-h">Buy it now</h3>
             <div class="card-buy">
                 <h4 class="card-h-buy">Standart</h4> 
-                    <p class="price-num"> $100</p>
+                    <span class="price-num"> $100</span>
                 <ol class="list-buy">
                     <li class="you-had">Porro officia cumque sint deleniti;</li>
                     <li class="you-had">Тemo facere rem vitae odit;</li>
@@ -114,7 +114,7 @@
             </div>
             <div class="card-buy">
                 <h4 class="card-h-buy">Premium</h4> 
-                    <p class="price-num">$150</p>
+                    <span class="price-num">$150</span>
                 <ol class="list-buy">
                     <li class="you-had">Porro officia cumque sint deleniti;</li>
                     <li class="you-had">Тemo facere rem vitae odit;</li>
@@ -129,7 +129,7 @@
             </div>
             <div class="card-buy">
                 <h4 class="card-h-buy">Lux</h4> 
-                    <p class="price-num">$200</p>
+                    <span class="price-num">$200</span>
                 <ol class="list-buy">
                     <li class="you-had">Porro officia cumque sint deleniti;</li>
                     <li class="you-had">Тemo facere rem vitae odit;</li>
