заполнение полей(Допю исправления)

--- a/index.html
+++ b/index.html
@@ -148,24 +148,26 @@
             </div>
         </section>
         <section class="contact">
-            <h3 class="seventh-h"></h3>
+            <h3 class="seventh-h">Contacts</h3>
             <form action="" class="feedback">
-            <input type="text">
-            <input type="text">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <input type="text" class="send">
+               <input type="text" placeholder="Your name:">
+               <input type="email" placeholder="Your email:">
+               <textarea name="" id="" cols="30" rows="10" placeholder="Your message:"></textarea>
+               <input type="submit" class="send" value="send">
             </form>
-            <ul class="list-contact">
-                <li class="link"></li>
-                <li class="link"></li>
-                <li class="link"></li>
-                <li class="link"></li>
-            </ul>
-            <img src="" alt="" class="icon">
-            <img src="" alt="" class="icon">
-            <img src="" alt="" class="icon">
-            <img src="" alt="" class="icon">
-            <img src="" alt="" class="icon">
+            <div class="social-link">
+               <ul class="list-contact">
+                  <li class="link">here_your_login_skype</li>
+                  <li class="link">279679659</li>
+                  <li class="link">psdhtmlcss@mail.ru</li>
+                  <li class="link">80 00 4568 55 55</li>
+               </ul>
+               <img src="" alt="" class="icon">
+               <img src="" alt="" class="icon">
+               <img src="" alt="" class="icon">
+               <img src="" alt="" class="icon">
+               <img src="" alt="" class="icon">
+            </div>   
         </section>
     <footer>
     <p class="footer"></p>
