--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
                   <li class="link">psdhtmlcss@mail.ru</li>
                   <li class="link">80 00 4568 55 55</li>
                </ul>
-               <img src="" alt="" class="icon">
-               <img src="" alt="" class="icon">
-               <img src="" alt="" class="icon">
-               <img src="" alt="" class="icon">
-               <img src="" alt="" class="icon">
+               <img src="" alt="icon" class="icon">
+               <img src="" alt="icon" class="icon">
+               <img src="" alt="icon" class="icon">
+               <img src="" alt="icon" class="icon">
+               <img src="" alt="icon" class="icon">
             </div>   
         </section>
     <footer>
