--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             </form>
             <div class="social-link">
                <ul class="list-contact">
-                  <li class="link">here_your_login_skype</li>
-                  <li class="link">279679659</li>
-                  <li class="link">psdhtmlcss@mail.ru</li>
-                  <li class="link">80 00 4568 55 55</li>
+                  <li class="link link-1">here_your_login_skype</li>
+                  <li class="link link-2">279679659</li>
+                  <li class="link link-3">psdhtmlcss@mail.ru</li>
+                  <li class="link link-4">80 00 4568 55 55</li>
                </ul>
                <img src="" alt="icon" class="icon">
                <img src="" alt="icon" class="icon">
