--- a/index.html
+++ b/index.html
@@ -162,15 +162,16 @@
                   <li class="link link-3">psdhtmlcss@mail.ru</li>
                   <li class="link link-4">80 00 4568 55 55</li>
                </ul>
+               <!-- <img src="" alt="icon" class="icon">
                <img src="" alt="icon" class="icon">
                <img src="" alt="icon" class="icon">
                <img src="" alt="icon" class="icon">
-               <img src="" alt="icon" class="icon">
-               <img src="" alt="icon" class="icon">
+               <img src="" alt="icon" class="icon"> -->
+               <img  class="social-img"src="img/social_buttons.png" alt="">
             </div>   
         </section>
     <footer>
-    <p class="footer"></p>
+    <p class="footer">Copyright &copy; 2014 Product name · PSD HTML CSS</p>
     </footer>    
     </main>           
  </div>
