--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 <p class="par">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
-            <video src="" width="427" height="245"></video>
+            <video src="video/flame.mp4" width="427" height="245" controls autoplay loop muted poster="img/flame.jpg"></video>
         </section>
         <section class="section3">
             <h2 class="third-h">Dignity and pluses product</h2>
