--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
  <div class="container">
@@ -114,7 +115,7 @@
             </div>
             <div class="card-buy">
                 <h4 class="card-h-buy">Premium</h4> 
-                    <span class="price-num">$150</span>
+                <span class="price-num">$150</span>
                 <ol class="list-buy">
                     <li class="you-had">Porro officia cumque sint deleniti;</li>
                     <li class="you-had">Тemo facere rem vitae odit;</li>
@@ -125,11 +126,11 @@
                     <li class="you-had">Cum odio, iste quia doloribus autem; </li>
                     <li class="you-had">Aperiam nulla ea neque.</li>
                 </ol>
-                    <button class="buy-btn">buy</button>
+                <button class="buy-btn">buy</button>
             </div>
             <div class="card-buy">
                 <h4 class="card-h-buy">Lux</h4> 
-                    <span class="price-num">$200</span>
+                <span class="price-num">$200</span>
                 <ol class="list-buy">
                     <li class="you-had">Porro officia cumque sint deleniti;</li>
                     <li class="you-had">Тemo facere rem vitae odit;</li>
@@ -144,7 +145,7 @@
                     <li class="you-had">Cum odio, iste quia doloribus autem;</li>
                     <li class="you-had">Aperiam nulla ea neque.</li>
                 </ol>
-                    <button class="buy-btn">buy</button>
+                <button class="buy-btn">buy</button>
             </div>
         </section>
         <section class="contact">
@@ -171,7 +172,7 @@
             </div>   
         </section>
     <footer>
-    <p class="footer">Copyright &copy; 2014 Product name · PSD HTML CSS</p>
+        <p class="footer">Copyright &copy; 2014 Product name · PSD HTML CSS</p>
     </footer>    
     </main>           
  </div>
