--- a/index.html
+++ b/index.html
@@ -163,12 +163,14 @@
                   <li class="link link-3">psdhtmlcss@mail.ru</li>
                   <li class="link link-4">80 00 4568 55 55</li>
                </ul>
-               <!-- <img src="" alt="icon" class="icon">
-               <img src="" alt="icon" class="icon">
-               <img src="" alt="icon" class="icon">
-               <img src="" alt="icon" class="icon">
-               <img src="" alt="icon" class="icon"> -->
-               <img  class="social-img"src="img/social_buttons.png" alt="">
+           <div class="social">
+                    <a href="#" class="soc-link tw"></a>
+                    <a href="#" class="soc-link face"></a>
+                    <a href="#" class="soc-link in"></a>
+                    <a href="#" class="soc-link google"></a>
+                    <a href="#" class="soc-link tube"></a>
+               </div> 
+               <!-- <img  class="social-img"src="img/social_buttons.png" alt=""> -->
             </div>   
         </section>
     <footer>
